# carrefourdatachallenge

./: README.md  carrefour.ipynb  env _exemplo.py  main.py  pyproject.toml  trendtopcis.csv  tweet_historico.html  tweets_trend.csv
