[tool.poetry]
name = "carrefourdatachallenge"
version = "0.1.0"
description = "carrefour data challenge"
authors = ["jairo monassa <desenvolvedorjairomonassa@gmail.com>"]
license = "copyrigth"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^3.10.0"
pymongo = "^3.12.0"
fastapi = "^0.68.1"
ibm-watson = ">=5.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
